# zeus-python

./: .gitignore  README.md  build_macos12m1.sh  zeus_test.py
.github/workflows/: appimage.yml  macos12.yml  macos14.yml  windows.yml
src/: CMakeLists.txt  find_copy_dlls.py  hello.c  requirements.txt  setup.py  setup_macos14.py  setup_win10.py
src/scripts/: bdist_single.sh  bdist_wheel.sh
src/zeus/: .gitignore  zeus.cpp
